--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.14",
@@ -19,10 +19,11 @@
     "jotai": "^2.6.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.6",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "13.9.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
