base operations working

--- a/app.json
+++ b/app.json
@@ -31,6 +31,7 @@
       "eas": {
         "projectId": "e6f8c9fa-86a1-4ed1-a22e-2806e68eb15f"
       }
-    }
+    },
+    "owner": "didi9762"
   }
 }
