--- a/package.json
+++ b/package.json
@@ -9,21 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@ant-design/react-native": "^5.0.5",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.14",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
+    "expo-linking": "~5.0.2",
     "expo-status-bar": "~1.6.0",
     "jotai": "^2.6.1",
+    "ngrok": "^5.0.0-beta.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.6",
+    "react-native-really-awesome-button": "^2.0.4",
+    "react-native-screens": "^3.29.0",
     "react-native-svg": "13.9.0",
+    "react-native-vector-icons": "^10.0.3",
+    "rn-swipe-button": "^1.3.8",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
