--- a/app.json
+++ b/app.json
@@ -18,6 +18,10 @@
       "supportsTablet": true
     },
     "android": {
+      "usesCleartextTraffic": true,
+      "config": {
+        "usesCleartextTraffic": true
+      },
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -32,6 +36,12 @@
         "projectId": "e6f8c9fa-86a1-4ed1-a22e-2806e68eb15f"
       }
     },
-    "owner": "didi9762"
+    "owner": "didi9762",
+    "plugins": [[
+      "expo-build-properties", {
+        "android": {
+          "usesCleartextTraffic": true
+        }}]
+    ]
   }
 }
