--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/react": "~18.2.45",
     "axios": "^1.6.5",
     "expo": "^50.0.0",
+    "expo-build-properties": "~0.11.1",
     "expo-linking": "~6.2.2",
     "expo-status-bar": "~1.11.1",
     "jotai": "^2.6.1",
     "ngrok": "^5.0.0-beta.2",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-alert-notification": "^0.4.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
@@ -36,8 +38,7 @@
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "rn-swipe-button": "^1.3.8",
-    "typescript": "^5.3.0",
-    "expo-build-properties": "~0.11.1"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
